# tamil-agri-dataset-

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  sources_and_mappings.csv
scripts/: 04_adapt_data.py  05_filter_v9.py  08_inject_context.py  10_expand_tamil_answers.py  11_add_reasoning_tag.py  12_quality_filter.py  13_llm_judge.py  14_enrich_submission.py  15_verify_and_fix_mismatches.py  16_rewrite_completions.py  17_extract_kcc_gold.py  18_expand_and_merge.py  19_build_india_dataset.py
scripts/archive/: 01_scrape_tnau.py  02_extract_qa.py  03d_refine_answers.py  03f_enrich_metadata.py  03g_add_structural_diversity.py  05_process_kcc.py  06_merge_kcc.py  07_translate_new_rows.py  09_multiturn_l4l5.py
